[project]
name = "zmart-vallet-be"
version = "0.1.0"
description = "Playing aroud with vibe coding to create a smart wallet app"
authors = [
    {name = "Gai Ashkenazy",email = "gai.ashkenazy@ridewithvia.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_subclassing_any = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# Enable all relevant rule sets for strict linting
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "B",    # flake8-bugbear
  "I",    # isort
  "UP",   # pyupgrade
  "C4",   # flake8-comprehensions
  "RUF",  # ruff-specific rules
  "T20",  # flake8-print (forbids print)
  "DTZ",  # flake8-datetimez
  "SIM",  # flake8-simplify
  "N",    # pep8-naming
  "A",    # flake8-builtins (avoid shadowing built-ins)
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"



[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
ruff = "^0.12.1"
pytest = "^8.4.1"

